add eu logo, remove email address

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,10 @@
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
+<!--          <li>{{ site.title }}</li> 
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+-->
+		  <li><img src="/images/eu.png" alt="" style="margin:2px 2px"/>
         </ul>
       </div>
 
