add grant number in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,7 @@
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
 -->
 		  <li><img src="/images/flag_yellow_low.jpg" alt="" style="margin:2px 2px"/>
+		  <li>H2020 grant number 776242
         </ul>
       </div>
 
