--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,8 +10,8 @@
 <!--          <li>{{ site.title }}</li> 
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
 -->
-		  <li><img src="/images/flag_yellow_low.jpg" alt="" style="margin:2px 2px"/>
-		  <li>H2020 grant number 776242
+		  <li><img src="/images/eu.jpg" alt="" style="margin:2px 2px"/>
+		  <li>H2020 grant 776242
         </ul>
       </div>
 
