--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
 <!--          <li>{{ site.title }}</li> 
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
 -->
-		  <li><img src="/images/eu.jpg" alt="" style="margin:2px 2px"/>
+		  <li><img src="/images/eu.jpg" alt=""/>
 		  <li>H2020 grant 776242
         </ul>
       </div>
