add link to cordis

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
 -->
 		  <li><img src="/images/eu.jpg" alt=""/>
-		  <li>H2020 grant 776242
+		  <li>H2020 grant <a href="http://cordis.europa.eu/projects/776242">776242</a>
         </ul>
       </div>
 
