--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,7 @@
 ---
 layout: default
 ---
-<article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+<h2>{{ page.title }}</h2>
 
-  <div class="post-content">
-    {{ content }}
-  </div>
-
-</article>
+{{content}}
