--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,10 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-  </header>
+<small>{{ page.date | date: "%-d %B %Y" }}</small>
+<h2>{{ page.title }}</h2>
 
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
-  </div>
+<p class="view">by {{ page.author | default: site.author }}</p>
 
-</article>
+{{content}}
