--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,25 @@
 ---
 
 @import "jekyll-theme-minimal";
+
+.channels img {
+	margin-right: 1em; 
+}
+
+.news strong {
+	display: block;
+	margin-bottom: 0.75em;
+}
+
+.eu {
+	margin-top: 4em;
+}
+
+header {
+	position: relative;
+}
+
+a:hover {
+	font-weight: inherit;
+	color: #8A684F;
+}
