Changed from UNPKG to jsDelivr - UNPKG had to many downtimes recently.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,10 +41,10 @@
 
         <p class="view channels">
           <!-- Thankfully provided by https://simpleicons.org/ -->
-          <a href="https://github.com/Open-EO"><img height="24" width="24" src="https://unpkg.com/simple-icons@latest/icons/github.svg" alt="GitHub: Open-EO" title="GitHub: Open-EO" /></a>
-          <a href="https://twitter.com/Open_EO"><img height="24" width="24" src="https://unpkg.com/simple-icons@latest/icons/twitter.svg" alt="Twitter: Open_EO" title="Twitter: Open_EO" /></a>
-          <a href="https://www.youtube.com/channel/UCMJQil8j9sHBQkcSlSaEsvQ"><img height="24" width="24" src="https://unpkg.com/simple-icons@latest/icons/youtube.svg" alt="Twitter: openEO" title="Twitter: openEO" /></a>
-          <a href="https://openeo-chat.eodc.eu/channel/public"><img height="24" width="24" src="https://unpkg.com/simple-icons@latest/icons/wechat.svg" alt="Public chat" title="Public chat" /></a>
+          <a href="https://github.com/Open-EO"><img height="24" width="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.9/icons/github.svg" alt="GitHub: Open-EO" title="GitHub: Open-EO" /></a>
+          <a href="https://twitter.com/Open_EO"><img height="24" width="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.9/icons/twitter.svg" alt="Twitter: Open_EO" title="Twitter: Open_EO" /></a>
+          <a href="https://www.youtube.com/channel/UCMJQil8j9sHBQkcSlSaEsvQ"><img height="24" width="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.9/icons/youtube.svg" alt="Twitter: openEO" title="Twitter: openEO" /></a>
+          <a href="https://openeo-chat.eodc.eu/channel/public"><img height="24" width="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.9/icons/wechat.svg" alt="Public chat" title="Public chat" /></a>
         </p>
 
         <p class="view eu">
