--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -6,8 +6,23 @@ a:hover, .theme-default-content:not(.custom) a:hover
   padding-bottom 0
   display block
 
-.dropdown-wrapper .nav-dropdown .dropdown-subitem-wrapper .dropdown-subitem a
-  padding-left 2.2rem
+.dropdown-wrapper
+  cursor inherit !important
+  button, a
+    cursor pointer
+  .nav-dropdown
+   .dropdown-item
+      span, em
+        padding 0 1.5rem 0 1.25rem
+    .dropdown-subitem-wrapper .dropdown-subitem
+      a, span, em
+        padding-left 2.2rem
+
+.sidebar .nav-links .nav-item
+  padding-left 0 !important
+
+.sidebar-heading
+  font-weight 600 !important
 
 @media (max-width: $MQNarrow)
   .navbar .nav-links .nav-item:first-of-type
@@ -19,6 +34,9 @@ a:hover, .theme-default-content:not(.custom) a:hover
   .navbar .site-name.can-hide
     display inline-block
     width auto
+
+  .nav-links .nav-item:first-child
+    margin-left 1.5rem !important
 
 @media (max-width: 300px)
   .navbar .site-name.can-hide
