Add JS getting started and fix/align Python accordingly.

--- a/.vuepress/theme/styles/code.styl
+++ b/.vuepress/theme/styles/code.styl
@@ -12,6 +12,12 @@
       &.inserted
         color $accentColor
 
+.code-copy
+  position absolute
+  bottom 0
+  right 0
+  z-index 3
+
 {$contentClass}
   pre, pre[class*="language-"]
     line-height 1.4
