Fix site title overflow issues

--- a/.vuepress/styles/palette.styl
+++ b/.vuepress/styles/palette.styl
@@ -1,6 +1,7 @@
 $accentColor = #267CB9
 $badgeTipColor = #267CB9
 
-$MQNarrow = 1200px
-$MQMobile = 920px
+$MQMedium = 1366px
+$MQNarrow = 1280px
+$MQMobile = 1024px
 $MQMobileNarrow = 500px
