--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -219,4 +219,9 @@ a.header-anchor
     .page
       padding-left 0
 
+// Fix for https://github.com/Open-EO/openeo-vue-components/issues/37
+.vue-component.search-box
+  .icon
+    display none
+
 @require 'mobile.styl'
