hidden title for "fragment" links #66

--- a/.vuepress/theme/styles/index.styl
+++ b/.vuepress/theme/styles/index.styl
@@ -161,6 +161,10 @@ a
   h1, h2, h3, h4, h5, h6
     font-weight 600
     line-height 1.25
+  
+  h2, h3, h4
+    margin-top (0 - $navbarHeight)
+    padding-top $navbarHeight
 
   {$contentClass}:not(.custom) > &
     margin-top (0.5rem - $navbarHeight)
